# cookiecutter-pipenv

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Pipfile  entry_points.cfg  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
