[metadata]
name = {{cookiecutter.project_slug}}
version = attr: {{cookiecutter.project_slug}}.__version__
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
licence_file = LICENSE

[options]
packages = find:
packages_dir =
    = src
entry_points = file: entry_points.cfg

[options.packages.find]
where = src
